--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -15,6 +15,20 @@
     <ul>
         <li>Your controller at <code><a href="{{ '/home/fernando/dev/web/learning-symfony/src/Controller/BlogController.php'|file_link(0) }}">src/Controller/BlogController.php</a></code></li>
         <li>Your template at <code><a href="{{ '/home/fernando/dev/web/learning-symfony/templates/blog/index.html.twig'|file_link(0) }}">templates/blog/index.html.twig</a></code></li>
+        <li>Current page is <code>{{ page }}</code></li>
+    </ul>
+    <hr>
+    <h1>All Posts</h1>
+
+    <ul>
+      {% for post in posts %}
+        <li>
+            <a href="{{ path('blog_show', { 'id': post.id }) }}">
+                {{ post.title }}
+            </a>
+            by <i>{{ post.author }}</i>
+        </li>
+      {% endfor %}
     </ul>
 </div>
 {% endblock %}
