--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -1,34 +1,53 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello BlogController!{% endblock %}
+{% block title %}Hello BlogController!
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/fernando/dev/web/learning-symfony/src/Controller/BlogController.php'|file_link(0) }}">src/Controller/BlogController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/fernando/dev/web/learning-symfony/templates/blog/index.html.twig'|file_link(0) }}">templates/blog/index.html.twig</a></code></li>
-        <li>Current page is <code>{{ page }}</code></li>
-    </ul>
+  <main>
+    <section class="container">
+      <article class="columns">
+        <div class="column col-12">
+          <h1>Hello
+            {{ controller_name }}! ✅
+          </h1>
+          <p>This friendly message is coming from:</p>
+          <ul>
+            <li>Your controller at
+              <code>
+                <a href="{{ '/home/fernando/dev/web/learning-symfony/src/Controller/BlogController.php'|file_link(0) }}">src/Controller/BlogController.php</a>
+              </code>
+            </li>
+            <li>Your template at
+              <code>
+                <a href="{{ '/home/fernando/dev/web/learning-symfony/templates/blog/index.html.twig'|file_link(0) }}">templates/blog/index.html.twig</a>
+              </code>
+            </li>
+            <li>Current page is
+              <code>{{ page }}</code>
+            </li>
+          </ul>
+        </div>
+      </article>
+    </section>
     <hr>
-    <h1>All Posts</h1>
-
-    <ul>
-      {% for post in posts %}
-        <li>
-            <a href="{{ path('blog_show', { 'id': post.id }) }}">
-                {{ post.title }}
-            </a>
-            by <i>{{ post.author }}</i>
-        </li>
-      {% endfor %}
-    </ul>
-</div>
+    <section class="container">
+      <article class="columns">
+        <div class="column col-12">
+          <h1>All Posts</h1>
+          <ul>
+            {% for post in posts %}
+              <li>
+                <a href="{{ path('blog_show', { 'id': post.id }) }}">
+                  {{ post.title }}
+                </a>
+                by
+                <i>{{ post.author }}</i>
+              </li>
+            {% endfor %}
+          </ul>
+        </div>
+      </article>
+    </section>
+  </main>
 {% endblock %}
