--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}
-              <link rel="stylesheet" href="{{ asset('build/app.css') }}">
-        {% endblock %}
-    </head>
-    <body>
-        {% include "navbar.html.twig" %}
-        {% block body %}{% endblock %}
-        {% block javascripts %}
-            <script src="{{ asset('build/app.js') }}"></script>
-        {% endblock %}
-    </body>
+  <head>
+    <meta charset="UTF-8">
+    <title>
+      {% block title %}
+        Welcome!
+      {% endblock %}
+    </title>
+    {% block stylesheets %}
+      <link rel="stylesheet" href="{{ asset('build/app.css') }}">
+    {% endblock %}
+  </head>
+  <body>
+    {% include "navbar.html.twig" %}
+    <br>
+    {% block body %}
+    {% endblock %}
+    {% block javascripts %}
+      <script src="{{ asset('build/app.js') }}"></script>
+    {% endblock %}
+  </body>
 </html>
